# zh_wikiextractor

./: .gitignore  Cargo.toml  LocalSettings.php  README.md  docker-compose.yml  parse.py
src/: main.rs
