[package]
name = "zh_wikipedia_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
fancy-regex = "0.11.0"
itertools = "0.11.0"
parquet = "48.0.0"
kdam = "0.5.0"
chrono = "0.4.31"
